@@ -1242,6 +1242,26 @@ INT_PTR CALLBACK Primitive::ObjImportProc(HWND hwndDlg, UINT uMsg, WPARAM wParam
                      bool convertToLeftHanded = IsDlgButtonChecked(hwndDlg, IDC_CONVERT_COORD_CHECK) == BST_CHECKED;
                      bool importAbsolutePosition = IsDlgButtonChecked(hwndDlg, IDC_ABS_POSITION_RADIO) == BST_CHECKED;
                      bool centerMesh = IsDlgButtonChecked(hwndDlg, IDC_CENTER_MESH)==BST_CHECKED;
+                     bool importMaterial = IsDlgButtonChecked(hwndDlg, IDC_IMPORT_MATERIAL) == BST_CHECKED;
+                     if (importMaterial)
+                     {
+                         string filename(szFileName);
+                         size_t index = filename.find_last_of(".");
+                         if (index != -1)
+                         {
+                             char szMatName[1024] = { 0 };
+                             memcpy(szMatName, szFileName, index);
+                             strcat_s(szMatName, ".mtl");
+                             Material *mat = new Material();
+                             if (WaveFrontObjLoadMaterial(szMatName, mat))
+                             {
+                                 g_pvp->GetActiveTable()->AddMaterial(mat);
+                                 strcpy_s(prim->m_d.m_szMaterial, mat->m_szName);
+                                 g_pvp->m_sb.PopulateDropdowns(); // May need to update list of images
+                                 g_pvp->m_sb.RefreshProperties();
+                             }
+                         }
+                     }
                      if (prim->m_mesh.LoadWavefrontObj(szFileName, flipTV, convertToLeftHanded))
                      {
                         if (importAbsolutePosition || centerMesh)
