@@ -679,6 +679,8 @@
 #define IDC_ABS_POSITION_RADIO          478
 #define IDC_CHECK3                      479
 #define IDC_CENTER_MESH                 479
+#define IDC_CHECK2                      480
+#define IDC_IMPORT_MATERIAL             480
 #define IDC_JOYLFLIPCOMBO               501
 #define IDC_JOYRFLIPCOMBO               502
 #define IDC_JOYPLUNGERCOMBO             503
@@ -891,7 +893,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        620
 #define _APS_NEXT_COMMAND_VALUE         33003
-#define _APS_NEXT_CONTROL_VALUE         480
+#define _APS_NEXT_CONTROL_VALUE         481
 #define _APS_NEXT_SYMED_VALUE           188
 #endif
 #endif
